<resources>
    <string name="app_name">EasyAndroid</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_workexchange">WorkExchange</string>
    <string name="title_onlineclass">OnlineClass</string>
    <string name="title_practiceonline">PracticeOnline</string>
    <string name="title_knowledgebroadcast">KnowledgeBroadcast</string>

    <string name="item_title_online_class_work_from">WorkFrom:</string>
    <string name="item_title_online_class_stage">Stage:</string>
    <string name="item_title_online_class_type">Type:</string>

    <string name="online_class_project_type">ProjectType:</string>
    <string name="online_class_project_stage">Stage:</string>
    <string name="online_class_project_sort">Sort:</string>

    <string name="online_class_detail_title">Project Detail</string>

    <string name="online_class_small_detail_title">SmallDetail</string>
    <string name="online_class_small_from_title">ProjectFrom</string>
    <string name="online_class_functional_module_title">FunctionalModule</string>
    <string name="online_class_all_comment_title">AllComment</string>
    <string name="online_class_more_comment_title">MoreComment</string>

    <string name="online_class_tv_view_online">ViewOnline</string>
    <string name="online_class_tv_download">Download</string>
    <string name="online_class_tv_view_Play">Play</string>
    <string name="online_class_tv_view_Download">Download</string>

    <string name="online_class_tv_mod_name">ModuleName</string>
    <string name="online_class_tv_develop_skills">DevelopSkills</string>
    <string name="online_class_tv_tea_ppt">TeachingPPT</string>

    <string name="online_class_tv_req_doc">ReqDoc</string>
    <string name="online_class_tv_des_doc">DesDoc</string>
    <string name="online_class_tv_source_code">SourceCode</string>
    <string name="online_class_tv_app">Application</string>

    <string name="text_input_some">Input Here</string>
    <string name="text_send_comment">Send Comment</string>
    <string name="text_logout">Logout</string>
    <string name="text_login_or_reg">Login/reg</string>

    <string name="nav_menu_item_title_user_info">User Info</string>
    <string name="nav_menu_item_title_answer_log">Answer Log</string>
    <string name="nav_menu_item_title_exchange_log">Exchange Log</string>

    <string name="tv_reg_title">Register</string>
    <string name="tv_reg_user">User</string>
    <string name="tv_reg_password">Password</string>
    <string name="tv_reg_mail">E-Mail</string>
    <string name="tv_reg_tel">Tel</string>

    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
</resources>
