<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_work_exchange"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_workexchange" />

    <item
        android:id="@+id/navigation_online_class"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_onlineclass" />

    <item
        android:id="@+id/navigation_practice_online"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_practiceonline" />

    <item
        android:id="@+id/navigation_knowledge_broadcast"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_knowledgebroadcast"/>

</menu>
