<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_nav_user_info"
            android:title="@string/nav_menu_item_title_user_info" />
        <item
            android:id="@+id/nav_answer_log"
            android:icon="@drawable/ic_nav_answer_log"
            android:title="@string/nav_menu_item_title_answer_log" />
        <item
            android:id="@+id/nav_exchange_log"
            android:icon="@drawable/ic_nav_exchange_log"
            android:title="@string/nav_menu_item_title_exchange_log" />
        <item
            android:id="@+id/nav_knowledge_log"
            android:icon="@drawable/ic_nav_knowledge_broadcast"
            android:title="@string/nav_menu_item_title_knowledge_log" />
    </group>

</menu>
