<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccffffff"
    android:orientation="vertical"
    android:padding="@dimen/layout_normal_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_class_project_type"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"/>

        <GridView
            android:id="@+id/gridView_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="6sp"
            android:numColumns="auto_fit"
            android:verticalSpacing="6sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_class_project_stage"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"/>

        <GridView
            android:id="@+id/gridView_stage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="6sp"
            android:numColumns="auto_fit"
            android:verticalSpacing="6sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_class_project_sort"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sort_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_radius_orange"
                android:layout_margin="5dp"
                android:text="时间降序"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/button_sort_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_line_radius_orange"
                android:text="热度降序"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sort_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_radius_main"
                android:layout_margin="5dp"
                android:text="@string/text_cancel"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/button_sort_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_radius_main"
                android:text="@string/text_ok"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>