<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_normal_padding"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_item_online_class_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_item_online_class_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="6"
            android:maxLines="6"
            android:textSize="@dimen/text_size_small"
            android:text="《道德经》是春秋时期老子（李耳）的哲学作品，又称《道德真经》、《老子》、《五千言》、《老子五千文》，是中国古代先秦诸子分家前的一部著作，为其时诸子所共仰，是道家哲学思想的重要来源。道德经分上下两篇，原文上篇《德经》、下篇《道经》，不分章，后改为《道经》37章在前，第38章之后为《德经》，并分为81章。"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="@string/item_title_online_class_work_from"/>

                <TextView
                    android:id="@+id/textView_item_work_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="成都职业技术学院"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="@string/item_title_online_class_stage"/>

                <TextView
                    android:id="@+id/textView_item_stage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="初级"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="@string/item_title_online_class_type"/>

                <TextView
                    android:id="@+id/textView_item_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:text="美食"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_like"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/ic_list_has_like"/>

                <TextView
                    android:id="@+id/textView_item_online_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="208人点赞"
                    android:textSize="@dimen/text_size_small"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_list_people_see"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/ic_list_people_see"/>

                <TextView
                    android:id="@+id/textView_list_people_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:text="34人浏览"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_list_exchange"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/ic_list_exchange"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_small"
                    android:text="98人转发"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:maxLines="1"
                android:textSize="@dimen/text_size_small"
                android:text="2017.07.10"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>